2008-02-17  Koji Arai  <arai@users.sourceforge.jp>

	* src/lhext.c (extract_one) could not extract files under readonly directories, like:

	    dr-xr-xr-x 2 arai arai 4096 Jan  5 03:30 foo/
	    -rw-r--r-- 1 arai arai    0 Jan  5 03:30 foo/bar

	* tests/Makefile.am: added a test for above.

	* tests/lha-test.in: ditto.

	* tests/lha-test18: ditto.

2008-02-05  Koji Arai  <arai@users.sourceforge.jp>

	* config.h. configure.ac: added a configure option
	--with-additional-suffixes for SuSE Linux.

	* src/lharc.c (open_old_archive): make it possible to add archive
	suffixes.

	* src/lharc.c (print_version): show the configure option by the
	--version option.

2007-09-09  Koji Arai  <arai@users.sourceforge.jp>

	* src/header.c: `put_longword()' should be used the ANSI-C declaration.

	Created archives was broken on Big-endian machine (and 64-bits machine).

2007-09-08  Koji Arai  <arai@users.sourceforge.jp>

	* Added tests for extract large files.

	Added two tests for extract files over 2G and 4G bytes.
	These are not performed in default, because it will be take a long time.

2007-09-08  Koji Arai  <arai@users.sourceforge.jp>

	* Fix a bug: Could not extract 2G over files.

2007-09-05  Koji Arai  <arai@users.sourceforge.jp>

	* 00readme.autoconf: Added description for the -b switch which extract MacBinaries.

2007-09-04  Koji Arai  <arai@users.sourceforge.jp>

	* use the length modifier `ll' (%llu) for printing 64bit value.

2007-09-04  Koji Arai  <arai@users.sourceforge.jp>

	* update prototypes.h using cproto

2007-09-03  Koji Arai  <arai@users.sourceforge.jp>

	* src/append.c, src/extract.c, src/header.c, src/indicator.c, src/lha.h, src/lhadd.c, src/lhext.c, src/lhlist.c, src/prototypes.h, src/slide.c, src/util.c: 
	Possible to extract files over 4G, use UNLHA32.DLL specific extended header.

2007-05-23  Koji Arai  <arai@users.sourceforge.jp>

	* tests/lha-test.in: added an optional numeric command-line
	argument, and a command-line switch -n.